@@ -1,4 +1,4 @@
-/*  MiniWebSvr - A small webserver
+/*  MiniWebsvr - A small webserver
     Copyright (C) 2007  Daniel John Walker and Nickolas Antonie Grigoriadis
     E-Mail: djwalker at users.sourceforge.net and grigi_ at users.sourceforge.net
 
@@ -21,7 +21,7 @@
 
 /************************* Compile time Limits/Options ***********************/
 
-#define VERSION "MiniWebSvr/0.0.6svn"
+#define VERSION "MiniWebsvr/0.0.6svn"
 #define COPYRIGHT "Copyright (C) 2007  Nickolas Antonie Grigoriadis"
 #define EMAIL "grigi_ at users.sourceforge.net"
 
